# Progect1_CPLUS_33

./: architecture.drawio  readMe
PopovaOS/: Action_Users.cpp  Action_Users.h  IUser.cpp  IUser.h  Message.h  UI.cpp  UI.h  User.cpp  User.h  main.cpp
SkillChat/: CMakeLists.txt  main.cpp
SkillChat/Exception/: chat_exception.cpp  chat_exception.h
SkillChat/Message/: message.cpp  message.h  message_exceptions.cpp  message_exceptions.h
SkillChat/MessageKeeper/: message_keeper.h
SkillChat/MessageKeeper/MessageKeeperException/: message_keeper_exception.cpp  message_keeper_exception.h
SkillChat/MessageKeeper/SqlLite/: sql_lite_message_keeper.cpp  sql_lite_message_keeper.h
SkillChat/MessageKeeper/SqlLite/SqLiteException/: sql_lite_exception.cpp  sql_lite_exception.h
SkillChat/User/: user.cpp  user.h
